package entites;

public abstract class AbstractEntiteActive extends AbstractEntite {
}
