package entites;

public abstract class AbstractEntitePassive extends AbstractEntite {
}
