package entites;

import plateau.IEntitePlateau;

public class Obstacle extends AbstractEntitePassive {

    public Obstacle(String nom, IEntitePlateau plateau) {
        super(nom, plateau);
    }
}
