package plateau;

import entites.AbstractEntite;
import agent.AbstractAgentSitue;

import java.util.List;
import java.awt.*;

public class Case {

    private int id ;
    private Point position ;
    private List<AbstractAgentSitue> agents ;
    private List<AbstractEntite> entites ;
}
